Prevent Find my Location wrap and hide mobile buttons

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -598,6 +598,7 @@ mat-panel-title {
   font-size: 16px;
   font-weight: 400;
   line-height: 21.79px;
+  text-wrap: nowrap;
 }
 
 .button-icon {
